--- a/_posts/2018-04-12-Test2.md
+++ b/_posts/2018-04-12-Test2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Test"
+title: "Test2"
 date: 2018-04-12
 excerpt: "This is another Test"
 tags: [sample post, images, test]
@@ -8,4 +8,4 @@ tags: [sample post, images, test]
 
 ## he2 
 
-## Wait.. thing coming.
+## Wait.. things coming.
